--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
 		"commands": [
 			{
 				"command": "pureact-plugin.helloWorld",
-				"title": "Hello Example"
+				"title": "PureAct: Activate plugin"
 			},
 			{
 				"command": "pureact-plugin.infer",
-				"title": "Start purity inference"
+				"title": "PureAct: Start purity inference"
 			}
 		]
 	},
@@ -34,16 +34,22 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.58.0",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.2.2",
 		"@types/node": "14.x",
+		"@types/papaparse": "^5.2.6",
+		"@types/vscode": "^1.58.0",
+		"@typescript-eslint/eslint-plugin": "^4.28.4",
+		"@typescript-eslint/parser": "^4.28.4",
 		"eslint": "^7.27.0",
-		"@typescript-eslint/eslint-plugin": "^4.26.0",
-		"@typescript-eslint/parser": "^4.26.0",
 		"glob": "^7.1.7",
 		"mocha": "^8.4.0",
 		"typescript": "^4.3.2",
 		"vscode-test": "^1.5.2"
+	},
+	"dependencies": {
+		"csv-parser": "^3.0.0",
+		"node-csv": "^0.1.2",
+		"papaparse": "^5.3.1"
 	}
 }
