--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "pureact-plugin",
 	"displayName": "PureAct-Plugin",
 	"description": "",
+	"publisher": "QifanWang",
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.58.0"
